<resources>
    <string name="app_name">Corrective exercises</string>
    <string name="bmi_explain">Body mass index (BMI) is a statistical measure used to compare a person\'s weight and height.\n In fact.\n this test does not measure the rate of obesity.\n but is a suitable tool to estimate the health of a person\'s weight according to his height.\n This index was invented between 1830 and 1850 by the Belgian scientist Adolf Kotle</string>
    <string name="bmr_explain">The basal metabolic rate. or bmr.\n is the total amount of calories your body needs that performs the normal. basic function of the blood at rest. These basic functions include blood circulation. respiration. cell division. protein synthesis. ion transport. energy utilization by muscles. nerves. and cells.</string>
    <string name="laghar">Your weight is a little low.\n Here are some tips to gain weight. \nExercise is one of the most important factors not only for losing weight but also for gaining weight. So do not forget to exercise.\n Eat high-protein foods such as dairy, meat, soy, and high-carbohydrate foods such as pasta, rice, and whole grains. Drink eight to ten glasses of water a day.\n High-fat foods and fast foods are very harmful to the body, so do not use them.\n Lack of sleep also causes weight loss and too much sleep is harmful to the body.\n Adjust your sleep duration to about 8 hours a day.</string>
    <string name="tabiei">Your weight is normal.\n Here are some tips to maintain a normal weight.\n Exercise regularly.\n You do not need to go to the gym to exercise, but with simple exercises at home you can ensure your health.\n Avoid sleeping too much or sleeping too late.\n The best time to sleep is about eight hours a day.\n Avoid fast foods. Your body needs eight to ten glasses of water daily.</string>
    <string name="ezafevazn">You are a little overweight but do not worry because you can easily reach a normal weight by following the tips below.\n Exercise is always one of the most important factors in health.\n Exercise can cause both weight loss and weight gain, and it depends on the type of exercise you do.\n Another thing you can do to lose weight is to change your diet.\n You should eat light foods such as salads and fruits and avoid heavy foods such as kebabs.\n One of the most important causes of obesity and overweight is eating fast food, so in order to achieve a normal weight, you should avoid eating fast food.</string>
    <string name="chagh">You are obese.\n As you know, obesity can cause many diseases, so you should plan to lose weight to maintain your health.\n Here are some tips to lose weight. The most important Obesity is caused by overeating, so eat less and avoid heavy meals as much as you can.\n Exercise is something that everyone recommends for obese and thin people.\n Try to run daily. It may be difficult at first, but it is not a problem. In the first days, run a short route and you do not need to run a long distance, but try to increase the route every day to achieve the desired result.\nSleep less! Too much sleep will cause obesity, so it is better not to spend more than eight hours a day sleeping.</string>
    <string name="about">Sports Sciences of Damghan University   Prepared by Dr. Maliheh Ardakanizadeh.\n PhD in Sports Physiology and Faculty Member of Damghan University.\n and Mr. Hossein Yuzbashinejad and Mr. Mohammad Reza Mousavi.\n undergraduate students in the field of sports sciences.\n\n  Developer:\nMr. Mohammad Hossein Gilanpanah\n\n Grapist: Ms. Zahra Afshari\n\n  Contact with BideMajnoon:\n  korosh5775@gmail.com </string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="done">start</string>
    <string name="poshte_gerd">kyphosis</string>
    <string name="gardane_kaj">torticollis</string>
    <string name="paye_god">supinated foot</string>
    <string name="paye_saf">flat foot</string>
    <string name="lagan">asymmetric pelvis</string>
    <string name="paye_x">genu valgum</string>
    <string name="paye_parantezi">genu varum</string>
    <string name="poshte_god">lordosis</string>
    <string name="poshte_kaj">Scoliosis</string>
    <string name="sarbejelo">forward head</string>
    <string name="shane">uneven shoulders</string>
    <string name="shast">hallux valgus</string>
    <string name="changali">claw toe</string>
    <string name="chakoshi">hammer toe</string>
    <string name="areze_poshte_gerd">The dorsal arch of the spine is normally called kyphosis.\n which will turn into a complication called hyperkyphosis and requires medical attention if it is more than normal.\n This abnormality is a condition in which the arch of the thoracic spine becomes abnormal and tends to bend forward.\n causing respiratory problems in the affected people.\n In this abnormality.\n the anterior and thoracic muscles.\n such as the pectoralis major and small.\n and the arm\'s inner rotators.\n are shortened.\n and the muscles that straighten the spine and the anterior dentition become weak.\n Classification of kyphosis: Postural kyphosis: This type of kyphosis is caused by adopting an inappropriate physical position.\n The most common type of kyphosis is postural kyphosis.\n which occurs naturally in young people and the elderly.\n This abnormality can be corrected by correcting the resulting muscle imbalance.\n With age.\n the stability of the musculoskeletal system decreases.\n and kyphosis increases.\n Structural kyphosis: This abnormality is caused by factors such as abnormalities in the bones.\n intervertebral discs.\n nerves.\n ligaments.\n or muscles.\n In people with structural kyphosis.\n medical interventions should be used because the progression of the disease cannot be prevented without medical intervention</string>
    <string name="elat_poshte_gerd">1- Increasing thoracic or dorsal arch.\n 2- Falling shoulders forward and approaching the chin to the chest.\n 3- Shrinking the chest and related muscles.\n 4- Creating a bulge on the abdominal wall and hanging it down.\n 5- Protruding the scapula.\n 6- Flattening of the arch or lordosis of the back and neck.\n</string>
    <string name="test_poshte_gerd">One of the simplest and most common tests for this type of complication is the use of a vertical line.\n which is a normal people from the bottom to the top.\n passes from the outer part of the ankle.\n the side and the outer part of the patella of the knee.\n the center of the lateral and outer part of the pelvis.\n the center of the shoulder bone and the eardrum.\n In a people with around the back of the earlobe and the center of the shoulder.\n bone is in front of the line.\n and the center of the lateral and outer part of the pelvis is behind the vertical line of the people.\n</string>
    <string name="areze_gardane_kaj">The torticollis is a kind of muscular complication in which the head of the affected people rotates to the chin\'s opposite side.\n This type of complication can have various causes.\n the causes of which are mentioned in the sections.\n and it is the most common type of complication in congenital infants.\n</string>
    <string name="elat_gardane_kaj">Congenital factors include 1- Injury to the neck during childbirth.\n 2- The possibility of improper placement of the fetal neck in the uterus.\n Acquired factors include 1- Traumas to the neck that cause bleeding in the sternum-lumbar-mammary muscle.\n which becomes the scar tissue of the scar over time.\n The presence of this tissue causes the muscle to shorten.\n resulting in torticollis.\n 2- Unilateral contraction of the sternum-torus-mammary muscle.\n 3- Improper maintenance of the head for a long time such as study.\n 4- Drugs.\n 5- Alcohol.\n 6- Cervical disc diseases.\n 7- Tumors</string>
    <string name="test_gardane_kaj">1- Using a checkered plane and a vertical line.\n 2- Asymmetry of the distance between the corners and the surface of the shoulders.\n 2- Placement of the head on one side and rotation of the face and asymmetry of the jaw and face.\n 4- Connecting the shock appendages to each other and measuring the deviation of the spine.\n 5- Using radiography images</string>
    <string name="areze_paye_god">A supinated foot is an abnormality in which the foot\'s longitudinal arch has an abnormal increase and is often accompanied by a claw toe.\n </string>
    <string name="elat_paye_god">This complication is etiologically divided into congenital acquired and idiopathic types (with unknown cause).\n In the acquired type.\n this complication can be caused by one of the following reasons: 1- Shortness of the soft tissue of the sole of the foot.\n 2- Weakness of the smoky muscles and interosseous muscles.\n 3- Weakness of the extensor muscle of the toes with the anterior tibia 4- Excessive activity of muscles that are connected in the sole of the foot.\n including long thin reeds.\n 5- Short Achilles tendon.\n 6- Paralysis of the triceps muscles.\n 7- Excessive activity of the soleus muscles and flexor muscles of the toes.\n 8- Excessive activity of toe opener muscle.\n </string>
    <string name="test_paye_god">1- Sitting position of the knees.\n bend the heels on the ground.\n rotate the foot outwards.\n and try to open and move the toes apart.\n 2- Try to stretch the sole of the foot with your hands and a towel that has passed under the sole of the foot.\n 3- In a sitting position.\n like the previous exercise.\n using your hands or a towel.\n try to open your toes\' end and middle straps.\n 4- In the standing position.\n open the claws from each other in the form of a fan.\n 5- In a sitting position.\n with the help of your hands.\n press the first strap of your toes down.\n and the other straps up.\n 6- In the sitting position.\n try to bring the heel to the ground and stretch the sole of the foot in the starting position of the sprinters.\n 7- In the standing position.\n try to lift the toes and bring the back of the foot closer to the leg.\n  </string>
    <string name="areze_paye_saf">The forces on foot are transmitted to the ground from three points of the heel below the head of the first sole of the foot and below the head of the fifth sole of the foot.\n On the other hand.\n three arches on each sole; there is an inner longitudinal.\n outer longitudinal.\n and transverse arc.\n The reduction or disappearance of the inner longitudinal arch of the sole of the foot is called a flat foot.\n   </string>
    <string name="shast_one">In a sitting situation.\n take the thumb and pull it inward</string>
    <string name="shast_two">In a standing situation.\n place the thumb\'s back on the ground and bend it firmly at a maximum range of motion</string>
    <string name="shast_three">Wrap a sturdy plastic band around your toes and separate your toes</string>
    <string name="shast_four">In a standing situation.\n while standing.\n walk with your thumbs clenched together.\n </string>
    <string name="shast_five">Close your thumb using a suitable splint</string>
    <string name="height">height(cm)</string>
    <string name="weight">weight(kg)</string>
    <string name="calculate">  calculate  </string>
    <string name="sex">sex:</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="weight_kg">weight(kg)</string>
    <string name="height_m">height(cm)</string>
    <string name="age">age(year)</string>
    <string name="reason">reason</string>
    <string name="exercise">exercise</string>
    <string name="test">test</string>
</resources>