<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/poshte_gerd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/areze_poshte_gerd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/larg"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/ellat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textColor="@android:color/white"
            android:textSize="@dimen/larg"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_rectsngle"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/larg"
            android:textStyle="bold"
            android:text="@string/test"
            android:layout_marginTop="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_rectsngle"
            app:layout_constraintTop_toBottomOf="@+id/ellat" />

        <Button
            android:id="@+id/narmesh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/larg"
            android:textStyle="bold"
            android:text="@string/exercise"
            android:layout_marginTop="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_rectsngle"
            app:layout_constraintTop_toBottomOf="@+id/test" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>