<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="196dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:gravity="start"
                android:hint="@string/height"
                android:textColorHint="@android:color/white"
                app:hintTextColor="@android:color/white"
                android:theme="@style/TIL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/weight2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@android:color/white"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="start"
                android:hint="@string/weight"
                android:textColorHint="@android:color/white"
                app:hintTextColor="@android:color/white"
                android:theme="@style/TIL"
                app:layout_constraintBottom_toBottomOf="@+id/height1"
                app:layout_constraintEnd_toStartOf="@+id/height1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/height1">

                <EditText
                    android:id="@+id/vazn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@android:color/white"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/calculate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectsngle"
                android:gravity="center"
                android:text="@string/calculate"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <TextView
                android:id="@+id/resault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLength="36"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/larg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline2"
                tools:text="شاخص توده بدنی شما برابر است با " />

            <TextView
                android:id="@+id/resault2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="fill_horizontal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/larg"
                android:lineSpacingExtra="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resault"
                app:layout_constraintVertical_bias="1.0"
                tools:text="نتیجه کار که آیا چاقه طرف یا نه" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>